--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "morgan": "~1.9.1",
     "express-session": "1.17.1",
     "mysql": "2.18.1",
-    "crypto": "1.0.1"
+    "crypto": "1.0.1",
+    "emailjs": "3.4.0",
+    "nodemailer": "6.6.1"
   }
 }
