--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "morgan": "~1.9.1",
     "mysql": "2.18.1",
     "nodemailer": "6.6.1",
-    "silly-datetime": "^0.1.2"
+    "silly-datetime": "^0.1.2",
+    "formidable": "1.2.2",
+    "fs": "0.0.1-security"
   }
 }
